--- a/index.html
+++ b/index.html
@@ -25,6 +25,38 @@
             <img src="./images/IMG_7711.jpg" alt="Palace of Fine Arts in San Francisco">
         </div>
     </div>
+    <h1 id="information-header">Some random information.</h1>
+    <div class="section-two">
+        <div class="container-pics">
+            <div class="container-pic">
+                <img class="pic-cap" src="./images/IMG_7711_150px.jpg" alt="Palace of Fine Arts in San Francisco">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="container-pic">
+                <img class="pic-cap" src="./images/IMG_7711_150px.jpg" alt="Palace of Fine Arts in San Francisco">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="container-pic">
+                <img class="pic-cap" src="./images/IMG_7711_150px.jpg" alt="Palace of Fine Arts in San Francisco">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="container-pic">
+                <img class="pic-cap" src="./images/IMG_7711_150px.jpg" alt="Palace of Fine Arts in San Francisco">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+    <div class="section-three">
+        <p id="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <h3>-Thor, God of Thunder</h3>
+    </div>
+    <div class="section-four">
+        <div class="call-to-action">
+            <h2 id="call-to-action-text">Call to action! It's time!</h2>
+            <p class="secondary-text">Sign up for our product by clicking that button over there!</p>
+            <button class="second">Sign up</button>
+        </div>
+    </div>
     <div class="footer">
         <p class="secondary-text">Copyright &copy The Odin Project 2021</p>
     </div>
